--- a/app.json
+++ b/app.json
@@ -1,15 +1,14 @@
 {
-    "name": "Deepak Clouds Mirror",
+    "name": "Senti Clouds Mirror",
     "description": "A Telegram bot for all your mirror needs",
-    "logo": "https://imagetot.com/images/2021/06/17/d7e86862ce2686f4c6c6596bfa72785d.jpg",
     "keywords": [
       "bot",
       "telegram",
       "python"
     ],
-    "repository": "https://github.com/deepakcloudsoffical/deepak-clouds-mirror",
-    "website": "https://github.com/blackdeep04/deepak-clouds-mirror",
-    "success_url": "https://t.me/cloudsmirror",
+    "repository": "https://github.com/Sentivet/gdriveuploader",
+    "website": "https://github.com/Sentivet/gdriveuploader",
+    "success_url": "https://t.me/sentamilan",
     "stack": "container",
     "env": {
       "ENV": {
@@ -75,8 +74,8 @@
         "required": true
       },
       "UPSTREAM_REPO": {
-        "description": "Link for Bot Upstream Repo, If you want default update, Fill https://github.com/blackdeep04/deepak-clouds-mirror.",
-        "value": "https://github.com/blackdeep04/deepak-clouds-mirror",
+        "description": "Link for Bot Upstream Repo, If you want default update, Fill https://github.com/Sentivet/gdriveuploader.",
+        "value": "https://github.com/Sentivet/gdriveuploader",
         "required": true
       },
       "UPSTREAM_BRANCH": {
